# py_polls

./: .flake8  .pre-commit-config.yaml  README.md  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
models/: poll.py
