[tool.poetry]
name = "pypolls"
version = "0.1.0"
description = ""
authors = ["Kevin Rodríguez <kyrodriguez97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pre-commit
[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | config
  | migrations
)/
'''

# Flake8
[tool.flake8]
max-line-length = 100
ignore = "E302,E305"
extend-ignore = "E203, W503"
max-complexity = 10
exclude="*/migrations/*"

# Isort
[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# MyPy
# Global options:
[tool.mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true

